--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                         <span class="text"><a href="https://www.linkedin.com/in/juan-jes%C3%BAs-alonso-negr%C3%ADn-2a44391b1/">JuanJesusAlonsoNegrin</a></span>
                     </li>
                     <li>
+                        <span class="icon"><i class="fab fa-github"></i></span>
+                        <span class="text"><a href="https://github.com/GiovanniAlonsoNegrin">GiovanniAlonsoNegrin</a></span>
+                    </li>
+                    <li>
                         <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
                         <span class="text"><a href="https://goo.gl/maps/vDHkdfjTY4QYq5wFA">Arucas, Las Palmas de Gran Canaria</a></span>
                     </li>
