--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-globe-europe"></i></span>
-                        <span class="text"><a href="https://juanjesusalonsonegrin.es/">juanjesusalonsonegrin.online</a></span>
+                        <span class="text"><a href="https://juanjesusalonsonegrin.es/">juanjesusalonsonegrin.es</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fab fa-linkedin"></i></span>
