--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style/main.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta http-equiv="Expires" content="0">
+    <meta http-equiv="Last-Modified" content="0">
+    <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+    <meta http-equiv="Pragma" content="no-cache">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Juan Alonso</title>
 </head>
 <body>
     <div class="container">
-
         <div class="left-side">
             <div class="myLanguage">
                 <select id="select">
@@ -46,7 +49,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-envelope"></i></span>
-                        <span class="text"><a href="mailto:giovannialonsonegrin@gmail.com">giovannialonsonegrin@gmail.com</a></span>
+                        <span class="text"><a href="mailto:giovannialonsonegrin@gmail.com">info@juanjesusalonsonegrin.es</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-globe-europe"></i></span>
@@ -207,7 +210,7 @@
                 <div class="box">
                     <h4>Python</h4>
                     <div class="percent">
-                        <div style="width: 30%"></div>
+                        <div style="width: 60%"></div>
                     </div>
                 </div>
                 <div class="box">
