--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style/main.css">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="Last-Modified" content="0">
     <meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
     <meta http-equiv="Pragma" content="no-cache">
+    <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Juan Alonso</title>
 </head>
@@ -49,12 +49,12 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-envelope"></i></span>
-                        <span class="text"><a href="mailto:giovannialonsonegrin@gmail.com">info@juanjesusalonsonegrin.es</a></span>
+                        <span class="text"><a href="mailto:giovannialonsonegrin@gmail.com">giovannialonsonegrin@gmail.com</a></span>
                     </li>
-                    <li>
+                    <!-- <li>
                         <span class="icon"><i class="fas fa-globe-europe"></i></span>
                         <span class="text"><a target="_blank" href="https://juanjesusalonsonegrin.es/">juanjesusalonsonegrin.es</a></span>
-                    </li>
+                    </li> -->
                     <li>
                         <span class="icon"><i class="fab fa-linkedin"></i></span>
                         <span class="text"><a target="_blank" href="https://www.linkedin.com/in/juan-jes%C3%BAs-alonso-negr%C3%ADn-2a44391b1/">JuanJesusAlonsoNegrin</a></span>
@@ -131,7 +131,24 @@
                     <div class="year_company">
                         <h5 data-section="right"
                             data-value="dimensionDate">
-                            Oct - Nov 2021
+                            Febrero 22 - Actual
+                        </h5>
+                        <h5>A. Consultores<br>Tecnológicos S.L</h5>
+                    </div>
+                    <div class="text">
+                        <h4 data-section="right"
+                            data-value="dimensionJob">
+                            Desarrollador Web Junior
+                        </h4>
+                        <p data-section="right"
+                           data-value="dimensionDescription">Diseño  y creación de páginas web</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5 data-section="right"
+                            data-value="dimensionDate">
+                            Sep - Nov 2021
                         </h5>
                         <h5>Dimension TEI</h5>
                     </div>
@@ -184,7 +201,25 @@
                     </div>
                 </div>
                 <div class="box">
+                    <h4>Bootstrap</h4>
+                    <div class="percent">
+                        <div style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>Tailwinds</h4>
+                    <div class="percent">
+                        <div style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="box">
                     <h4>JavaScript</h4>
+                    <div class="percent">
+                        <div style="width: 50%"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>jQuery</h4>
                     <div class="percent">
                         <div style="width: 50%"></div>
                     </div>
@@ -196,15 +231,15 @@
                     </div>
                 </div>
                 <div class="box">
-                    <h4>SQL</h4>
+                    <h4>Laravel</h4>
                     <div class="percent">
-                        <div style="width: 50%"></div>
+                        <div style="width: 60%"></div>
                     </div>
                 </div>
                 <div class="box">
-                    <h4>Blade</h4>
+                    <h4>SQL</h4>
                     <div class="percent">
-                        <div style="width: 60%"></div>
+                        <div style="width: 50%"></div>
                     </div>
                 </div>
                 <div class="box">
@@ -222,7 +257,7 @@
                 <div class="box">
                     <h4>Java</h4>
                     <div class="percent">
-                        <div style="width: 10%"></div>
+                        <div style="width: 45%"></div>
                     </div>
                 </div>
             </div>
