--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <div class="contactInfo education">
                 <div data-section="left" data-value="education" class="title education">Estudios</div>
                 <ul>
+                    </li>
                     <li>
                         <h5 data-section="left" data-value="firstEducationDate">2021 - Actualmente</h5>
                         <h4 data-section="left" data-value="firstEducation">Técnico Superior en Desarrollo de Aplicaciones Web</h4>
@@ -130,18 +131,35 @@
                 <div class="box">
                     <div class="year_company">
                         <h5 data-section="right"
-                            data-value="dimensionDate">
-                            Febrero 22 - Actual
+                            data-value="intechDate">
+                            Mayo 2022 - Actual
+                        </h5>
+                        <h5>Intechpartner</h5>
+                    </div>
+                    <div class="text">
+                        <h4 data-section="right"
+                            data-value="intechJob">
+                            Desarrollador Web Junior
+                        </h4>
+                        <p data-section="right"
+                           data-value="intechDescription">Diseño  y desarrollo de páginas web</p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="year_company">
+                        <h5 data-section="right"
+                            data-value="atlanticDate">
+                            Feb - Mayo 2022
                         </h5>
                         <h5>A. Consultores<br>Tecnológicos S.L</h5>
                     </div>
                     <div class="text">
                         <h4 data-section="right"
-                            data-value="dimensionJob">
+                            data-value="atlanticJob">
                             Desarrollador Web Junior
                         </h4>
                         <p data-section="right"
-                           data-value="dimensionDescription">Diseño  y creación de páginas web</p>
+                           data-value="atlanticDescription">Diseño  y desarrollo de páginas web, administración de servidor y cuentas de correo</p>
                     </div>
                 </div>
                 <div class="box">
@@ -215,7 +233,7 @@
                 <div class="box">
                     <h4>JavaScript</h4>
                     <div class="percent">
-                        <div style="width: 50%"></div>
+                        <div style="width: 70%"></div>
                     </div>
                 </div>
                 <div class="box">
