update education and interest

--- a/index.html
+++ b/index.html
@@ -73,20 +73,24 @@
             <div class="contactInfo education">
                 <div data-section="left" data-value="education" class="title education">Estudios</div>
                 <ul>
+                    <li>
+                        <h5 data-section="left" data-value="firstEducationDate">Mayo 2022 - Actualmente</h5>
+                        <h4 data-section="left" data-value="firstEducation">Desarrollo Web</h4>
+                        <h4 data-section="left" data-value="firstEducationSchool">Academia ADF</h4>
                     </li>
                     <li>
-                        <h5 data-section="left" data-value="firstEducationDate">2021 - Actualmente</h5>
-                        <h4 data-section="left" data-value="firstEducation">Técnico Superior en Desarrollo de Aplicaciones Web</h4>
+                        <h5 data-section="left" data-value="secondEducationDate">2021 - Actualmente</h5>
+                        <h4 data-section="left" data-value="secondEducation">Técnico Superior en Desarrollo de Aplicaciones Web</h4>
                         <h4>IES El Rincón</h4>
                     </li>
                     <li>
                         <h5>2019 - 2021</h5>
-                        <h4 data-section="left" data-value="secondEducation">Técnico Superior en Administración de Sistemas Informaticos de Red</h4>
+                        <h4 data-section="left" data-value="thirdEducation">Técnico Superior en Administración de Sistemas Informaticos de Red</h4>
                         <h4>ICSE</h4>
                     </li>
                     <li>
                         <h5>2018 - 2019</h5>
-                        <h4 data-section="left" data-value="thirdEducation">Certificado de profesionalidad en Sistemas Microinformáticos</h4>
+                        <h4 data-section="left" data-value="fourthEducation">Certificado de profesionalidad en Sistemas Microinformáticos</h4>
                         <h4>Centros kuma</h4>
                     </li>
                 </ul>
@@ -104,12 +108,12 @@
                     <li>
                         <span data-section="left" data-value="secondLanguage" class="text">Inglés</span>
                         <div class="percent">
-                            <div style="width: 40%"></div>
+                            <div style="width: 50%"></div>
                         </div>
                     </li>
                 </ul>
             </div>
-
+            
         </div>
 
         <div class="right-side">
@@ -119,7 +123,7 @@
                     class="titleProfile">Perfil</h2>
                 <p data-section="right"
                    data-value="profileDescription">
-                    Soy una persona muy trabajadora, puntual, sociable y me gusta trabajar en equipo, mi objetivo es mejorar día a día mis habilidades con mucho esfuerzo y dedicación.
+                   Me considero un apasionado de la informática y del desarrollo web. Soy una persona muy trabajadora, puntual, responsable, sociable y me gusta trabajar en equipo.
                 </p>
             </div>
             <div class="about">
@@ -261,6 +265,12 @@
                     </div>
                 </div>
                 <div class="box">
+                    <h4>MongoDB</h4>
+                    <div class="percent">
+                        <div style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="box">
                     <h4>Python</h4>
                     <div class="percent">
                         <div style="width: 60%"></div>
@@ -288,20 +298,20 @@
                 </h2>
                 <ul>
                     <li data-section="right"
+                        data-value="development">
+                        <i class="fas fa-code"></i>&nbsp;&nbsp;Desarrollo
+                    </li>
+                    <li data-section="right"
                         data-value="gaming">
-                        <i class="fas fa-gamepad"></i> Juegos
+                        <i class="fas fa-gamepad"></i>&nbsp;&nbsp;Juegos
                     </li>
                     <li data-section="right"
                         data-value="swiming">
-                        <i class="fas fa-swimmer"></i> Natación
+                        <i class="fas fa-swimmer"></i>&nbsp;&nbsp;Natación
                     </li>
                     <li data-section="right"
                         data-value="cooking">
                         <i class="fas fa-utensils"></i> Cocina
-                    </li>
-                    <li data-section="right"
-                        data-value="walking">
-                        <i class="fas fa-film"></i> Cine
                     </li>
                 </ul>
             </div>
