--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <title>Juan Alonso</title>
 </head>
 <body>
+    <div class="overlay">
+        <div class="spinner"></div>
+    </div>
     <div class="container">
         <div class="left-side">
             <div class="myLanguage">
@@ -113,7 +116,6 @@
                     </li>
                 </ul>
             </div>
-            
         </div>
 
         <div class="right-side">
