--- a/index.html
+++ b/index.html
@@ -17,26 +17,36 @@
     </div>
     <div class="container">
         <div class="left-side">
-            <div class="myLanguage">
-                <select id="select">
-                    <option data-lang="es"
-                            data-section="language"
-                            data-value="spanish"
-                            selected>
-                        Español
-                    </option>
-                    <option data-lang="en"
-                            data-section="language"
-                            data-value="english">
-                        Inglés
-                    </option>
-                </select>
+            <div class="selectors">
+                <div class="my-language">
+                    <select id="select">
+                        <option data-lang="es"
+                                data-section="language"
+                                data-value="spanish"
+                                selected>
+                            Español
+                        </option>
+                        <option data-lang="en"
+                                data-section="language"
+                                data-value="english">
+                            Inglés
+                        </option>
+                    </select>
+                </div>
+                <div class="darkmode">
+                    <input type="checkbox" class="checkbox" id="checkbox">
+                    <label for="checkbox" class="checkbox-label">
+                        <i class="fas fa-moon"></i>
+                        <i class="fas fa-sun"></i>
+                        <span class="ball"></span>
+                    </label>
+                </div>
             </div>
             <div class="profileText">
                 <div class="profileImg">
                     <img src="img/Mi%20foto.jpg" alt="Juan Jesús Alonso Negrín">
                 </div>
-                <h2>Juan Jesús Alonso Negrín<br><span data-section="left" data-value="jobDescription">Programador web junior</span></h2>
+                <h2>Juan Jesús Alonso Negrín<br><span data-section="left" data-value="jobDescription">Programador web</span></h2>
             </div>
 
             <div class="contactInfo">
@@ -68,7 +78,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
-                        <span class="text"><a target="_blank" href="https://goo.gl/maps/vDHkdfjTY4QYq5wFA">Arucas, Las Palmas de Gran Canaria</a></span>
+                        <span class="text"><a target="_blank" href="https://maps.app.goo.gl/H7Ewq5CX1vQP2obS7">Telde, Las Palmas de Gran Canaria</a></span>
                     </li>
                 </ul>
             </div>
@@ -77,14 +87,14 @@
                 <div data-section="left" data-value="education" class="title education">Estudios</div>
                 <ul>
                     <li>
-                        <h5 data-section="left" data-value="firstEducationDate">Mayo 2022 - Actualmente</h5>
-                        <h4 data-section="left" data-value="firstEducation">Desarrollo Web</h4>
-                        <h4 data-section="left" data-value="firstEducationSchool">Academia ADF</h4>
+                        <h5 data-section="left" data-value="firstEducationDate">2021 - 2024</h5>
+                        <h4 data-section="left" data-value="firstEducation">Técnico Superior en Desarrollo de Aplicaciones Web</h4>
+                        <h4>IES El Rincón</h4>
                     </li>
                     <li>
-                        <h5 data-section="left" data-value="secondEducationDate">2021 - Actualmente</h5>
-                        <h4 data-section="left" data-value="secondEducation">Técnico Superior en Desarrollo de Aplicaciones Web</h4>
-                        <h4>IES El Rincón</h4>
+                        <h5 data-section="left" data-value="secondEducationDate">Mayo 2022 - noviembre 2022</h5>
+                        <h4 data-section="left" data-value="secondEducation">Desarrollo Web</h4>
+                        <h4 data-section="left" data-value="secondEducationSchool">Academia ADF</h4>
                     </li>
                     <li>
                         <h5>2019 - 2021</h5>
@@ -105,13 +115,13 @@
                     <li>
                         <span data-section="left" data-value="firstLanguage" class="text">Español</span>
                         <div class="percent">
-                            <div style="width: 95%"></div>
+                            <div style="width: 100%"></div>
                         </div>
                     </li>
                     <li>
                         <span data-section="left" data-value="secondLanguage" class="text">Inglés</span>
                         <div class="percent">
-                            <div style="width: 50%"></div>
+                            <div style="width: 40%"></div>
                         </div>
                     </li>
                 </ul>
@@ -221,7 +231,7 @@
                 <div class="box">
                     <h4>Css</h4>
                     <div class="percent">
-                        <div style="width: 80%"></div>
+                        <div style="width: 95%"></div>
                     </div>
                 </div>
                 <div class="box">
@@ -239,7 +249,7 @@
                 <div class="box">
                     <h4>JavaScript</h4>
                     <div class="percent">
-                        <div style="width: 70%"></div>
+                        <div style="width: 90%"></div>
                     </div>
                 </div>
                 <div class="box">
@@ -251,7 +261,7 @@
                 <div class="box">
                     <h4>PHP</h4>
                     <div class="percent">
-                        <div style="width: 60%"></div>
+                        <div style="width: 90%"></div>
                     </div>
                 </div>
                 <div class="box">
@@ -261,15 +271,21 @@
                     </div>
                 </div>
                 <div class="box">
-                    <h4>SQL</h4>
+                    <h4>Symfony</h4>
                     <div class="percent">
-                        <div style="width: 50%"></div>
+                        <div style="width: 90%"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <h4>POSTGRESQL</h4>
+                    <div class="percent">
+                        <div style="width: 80%"></div>
                     </div>
                 </div>
                 <div class="box">
                     <h4>MongoDB</h4>
                     <div class="percent">
-                        <div style="width: 80%"></div>
+                        <div style="width: 40%"></div>
                     </div>
                 </div>
                 <div class="box">
